--- a/src/App.css
+++ b/src/App.css
@@ -29,3 +29,7 @@
 .contactimg{
   background-image: linear-gradient(to bottom,   rgba(0, 0, 0, 0.815),rgba(0, 0, 0, 0.815)),url('/contact.jpg');
 }
+
+html {
+  scroll-behavior: smooth;
+}
