--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,11 @@
   background-image: linear-gradient(to bottom,   rgba(0, 0, 0, 0.815),rgba(0, 0, 0, 0.815)),url('/contact.jpg');
 }
 
+
 html {
   scroll-behavior: smooth;
 }
+.h-50{
+  height: 50vh;
+}
+
